7903842: Negative coverage in report for records
Reviewed-by: shurailine